--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
       <h1 id="mask-screen">Mask Screen</h1>
 <h2 id="mask-screen-version-info-">Mask Screen version info :</h2>
+<h3 id="100003">1.0.0005</h3>
+<p>Improve display performance.<br />
 <h3 id="100003">1.0.0004</h3>
 <p>Improve display performance.<br />
 <h3 id="100003">1.0.0003</h3>
