--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://abega-apps.github.io/">aBeGa Apps</a></h1>
+      <h1><a href="https://abega-apps.github.io/aBeGa-apps-website/">aBeGa Apps</a></h1>
       <h3 id="100004">Provide you with useful and fun apps.</h3>      
 
       <h1 id="mask-screen">Mask Screen</h1>
